# Practice-Program-C

./: CMakeLists.txt
include/: cmake.h  draw_chess_board.h  draw_pyramid.h  is_palindrome.h  prime_number.h  task1.h  task2.h  task3.h
include/vector/: Errors.h  Vector.h
src/: cmake.c  draw_chess_board.c  draw_pyramid.c  is_palindrome.c  main.c  perfect_number.c  perfect_number.h  prime_number.c  task1.c  task2.c  task3.c
src/vector/: Vector.c
